NetBSD Problem Report #35587
From root@garbled.net Mon Feb 12 07:11:41 2007
Return-Path: <root@garbled.net>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
by narn.NetBSD.org (Postfix) with ESMTP id 3AE6A63BA50
for <gnats-bugs@gnats.NetBSD.org>; Mon, 12 Feb 2007 07:11:41 +0000 (UTC)
Message-Id: <20070212071157.B8CAD2AC95@polaris.garbled.net>
Date: Mon, 12 Feb 2007 00:11:57 -0700 (MST)
From: root@garbled.net
Reply-To: root@garbled.net
To: gnats-bugs@NetBSD.org
Subject: lfs + hp700-4.0 crash in lfs_cleanerd
X-Send-Pr-Version: 3.95
>Number: 35587
>Category: port-hp700
>Synopsis: lfs + hp700-4.0 crash in lfs_cleanerd
>Confidential: no
>Severity: non-critical
>Priority: medium
>Responsible: port-hp700-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Mon Feb 12 07:15:01 +0000 2007
>Closed-Date: Sat Apr 05 10:13:38 +0000 2008
>Last-Modified: Sat Apr 05 10:13:38 +0000 2008
>Originator: Tim Rightnour
>Release: NetBSD 4.0_BETA2
>Organization:
>Environment:
System: NetBSD polaris.garbled.net 3.0 NetBSD 3.0 (GENERIC) #0: Mon Dec 19 01:04:02 UTC 2005 builds@works.netbsd.org:/home/builds/ab/netbsd-3-0-RELEASE/i386/200512182024Z-obj/home/builds/ab/netbsd-3-0-RELEASE/src/sys/arch/i386/compile/GENERIC i386
Architecture: hppa
Machine: hp700
>Description:
db> bt
cpu_Debugger(9fa174,90020000,0,8880e59) at netbsd:cpu_Debugger+0x10
panic(9f604c,0,0,56f9dc8) at netbsd:panic+0x1bc
panic(2000,c122d4,0,0) at netbsd:panic+0x14c
malloc(2159000,2000,4,0) at netbsd:malloc+0x36c
lfs_malloc(2159000,6432588,0,0) at netbsd:lfs_malloc+0x5c
lfs_newbuf(2159000,6432588,0,2000) at netbsd:lfs_newbuf+0x124
lfs_fakebuf(569a690,21530c8,22ca000,22f) at netbsd:lfs_fakebuf+0x74
lfs_markv(56f9438,d4b2375,c4bcdc,c4bcdc) at netbsd:lfs_markv+0xcdc
lfs_fcntl(56dbe70,b008cc03,56f92d0,1) at netbsd:lfs_fcntl+0x528
VOP_FCNTL(56c8c50,b008cc03,56f92d0,4ba92d0) at netbsd:VOP_FCNTL+0x90
vn_fcntl(7,4ba92d0,b008cc03,700027a0) at netbsd:vn_fcntl+0x70
fcntl_forfs(4ba92d0,56f9104,56f9198,0) at netbsd:fcntl_forfs+0x200
sys_fcntl(56f9000,56f9104,11b15306,56f9100) at netbsd:sys_fcntl+0x170
-- syscall #112640(700027a0, b008cc03, 7, 0, ...)
(null)(d3aff0,890368dc,890368dc,890368dc) at 0x172c80
panic: trap: uvm_fault(0xc4a5a8, 0, 1): 14
Stopped in pid 570.1 (lfs_cleanerd) at netbsd:cpu_Debugger+0x10: ldo R
'40(%r3),%r30
db>
>How-To-Repeat:
build pkgsrc with /obj on lfs.
>Fix:
unknown
>Release-Note:
>Audit-Trail:
From: Nick Hudson <skrll@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc:
Subject: PR/35587 CVS commit: src/sys/uvm
Date: Fri, 12 Oct 2007 06:45:18 +0000 (UTC)
Module Name: src
Committed By: skrll
Date: Fri Oct 12 06:45:18 UTC 2007
Modified Files:
src/sys/uvm: uvm_map.c
Log Message:
Don't restrict the offset when allocating a map entry for in-kernel map -
use UVM_UNKNOWN_OFFSET in the call to uvm_map_prepare.
This fixes a '"panic: malloc: out of space in kmem_map" when it's not
really' testcase of mine, and one reported to me by chuq. This is likely
to fix PR/35587 as well.
Looks/seems fine to me from chuq and yamt. Thanks.
To generate a diff of this commit:
cvs rdiff -r1.241 -r1.242 src/sys/uvm/uvm_map.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: Jeff Rizzo <riz@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc:
Subject: PR/35587 CVS commit: [netbsd-4] src/sys/uvm
Date: Fri, 12 Oct 2007 22:29:37 +0000 (UTC)
Module Name: src
Committed By: riz
Date: Fri Oct 12 22:29:37 UTC 2007
Modified Files:
src/sys/uvm [netbsd-4]: uvm_map.c
Log Message:
Pull up following revision(s) (requested by skrll in ticket #928):
sys/uvm/uvm_map.c: revision 1.242
Don't restrict the offset when allocating a map entry for in-kernel map -
use UVM_UNKNOWN_OFFSET in the call to uvm_map_prepare.
This fixes a '"panic: malloc: out of space in kmem_map" when it's not
really' testcase of mine, and one reported to me by chuq. This is likely
to fix PR/35587 as well.
Looks/seems fine to me from chuq and yamt. Thanks.
To generate a diff of this commit:
cvs rdiff -r1.232 -r1.232.2.1 src/sys/uvm/uvm_map.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->feedback
State-Changed-By: skrll@netbsd.org
State-Changed-When: Thu, 18 Oct 2007 18:53:24 +0000
State-Changed-Why:
I think a fixed has been committed to the netbsd-4 branch.
State-Changed-From-To: feedback->closed
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Sat, 05 Apr 2008 10:13:38 +0000
State-Changed-Why:
Problem is believed fixed. Please file another PR if problems persist.
Thanks,
Nick
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.